examples: Fix reference to examples/build-aux/ directory (regr. 2005-03-22).
* gettext-tools/examples/installpaths.in (EXAMPLESCONFIGDIR): Correct value.

--- a/gettext-tools/examples/installpaths.in
+++ b/gettext-tools/examples/installpaths.in
@@ -24,4 +24,4 @@ includedir="@includedir@"
 ACLOCALDIR="@aclocaldir@"
 GETTEXTSRCDIR="@datadir@/gettext"
 GETTEXTSRCPODIR="@datadir@/gettext/po"
-EXAMPLESCONFIGDIR="@docdir@/examples/config"
+EXAMPLESCONFIGDIR="@docdir@/examples/build-aux"
