--- a/gettext-tools/Makefile.am
+++ b/gettext-tools/Makefile.am
@@ -123,7 +123,8 @@ pkgdata_SCRIPTS = ../build-aux/config.rpath
 examplesbuildauxdir = $(docdir)/examples/build-aux
 examplesbuildaux_DATA = \
   ../build-aux/javacomp.sh.in ../build-aux/javaexec.sh.in \
-  ../build-aux/csharpcomp.sh.in ../build-aux/csharpexec.sh.in
+  ../build-aux/csharpcomp.sh.in ../build-aux/csharpexec.sh.in \
+  ../build-aux/gocomp.sh.in
 
 
 # Files copied from other directories.
