Modula-2 support: Add a unit test.
* autogen.sh (GNULIB_MODULES_TOOLS_OTHER): Add modula2, modula2comp-script.
* gettext-tools/configure.ac: Set and substitute BUILDMODULA2.
* gettext-tools/tests/init-env.in: Propagate MODULA2_CHOICE, BUILDMODULA2, M2C,
M2FLAGS.
* gettext-tools/tests/lang-modula2: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -428,6 +428,19 @@ AH_BOTTOM([
 dnl Check for nm output filter that yields the exported symbols.
 gt_GLOBAL_SYMBOL_PIPE
 
+gt_MODULA2_CHOICE
+if test "$MODULA2_CHOICE" != no; then
+  gt_MODULA2COMP
+  if test -n "$M2C"; then
+    BUILDMODULA2=yes
+  else
+    BUILDMODULA2=no
+  fi
+else
+  BUILDMODULA2=no
+fi
+AC_SUBST([BUILDMODULA2])
+
 dnl Check for Emacs and where to install .elc files.
 dnl Sometimes Emacs is badly installed. Allow the user to work around it.
 AC_ARG_WITH([emacs],
