--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -22,6 +22,10 @@ GO_CHOICE="@GO_CHOICE@"
 GO="@GO@"
 D_CHOICE="@D_CHOICE@"
 BUILDD="@BUILDD@"
+MODULA2_CHOICE="@MODULA2_CHOICE@"
+BUILDMODULA2="@BUILDMODULA2@"
+M2C="@M2C@"
+M2FLAGS="@M2FLAGS@"
 TESTLIBASPRINTF="@TESTLIBASPRINTF@"
 GLIBC2="@GLIBC2@"
 LOCALE_FR="@LOCALE_FR@"
