examples: Add hello-modula2 example.
* gettext-tools/examples/hello-modula2/INSTALL: New file.
* gettext-tools/examples/hello-modula2/autogen.sh: New file.
* gettext-tools/examples/hello-modula2/autoclean.sh: New file.
* gettext-tools/examples/hello-modula2/hello.mod.in: New file.
* gettext-tools/examples/hello-modula2/Makefile.am: New file.
* gettext-tools/examples/hello-modula2/configure.ac: New file.
* gettext-tools/examples/hello-modula2/m4/Makefile.am: New file.
* gettext-tools/examples/hello-modula2/po/LINGUAS: New file.
* gettext-tools/examples/hello-modula2/po/Makefile.am: New file.
* gettext-tools/examples/installpaths.in: Define also libdir.
* gettext-tools/m4/Makefile.am (examplesbuildaux_DATA): Add modula2comp.m4.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-modula2.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-modula2.
(hello-modula2.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-modula2.
($(srcdir)/../hello-modula2/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-modula2 as well.
* gettext-tools/examples/README: Mention hello-modula2.
* gettext-tools/doc/lang-modula2.texi: Likewise.
* NEWS: Likewise.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -400,6 +400,15 @@ EXAMPLESFILES = \
   hello-pascal/m4/Makefile.am \
   hello-pascal/po/Makefile.am \
   \
+  hello-modula2/INSTALL \
+  hello-modula2/autogen.sh \
+  hello-modula2/autoclean.sh \
+  hello-modula2/hello.mod.in \
+  hello-modula2/Makefile.am \
+  hello-modula2/configure.ac \
+  hello-modula2/m4/Makefile.am \
+  hello-modula2/po/Makefile.am \
+  \
   hello-d/INSTALL \
   hello-d/autogen.sh \
   hello-d/autoclean.sh \
@@ -500,6 +509,7 @@ EXAMPLESDIRS = \
   hello-sh \
   hello-gawk \
   hello-pascal \
+  hello-modula2 \
   hello-d \
   hello-smalltalk \
   hello-tcl \
