--- a/gettext-tools/examples/installpaths.in
+++ b/gettext-tools/examples/installpaths.in
@@ -17,6 +17,7 @@
 
 prefix='@prefix@'
 exec_prefix="@exec_prefix@"
+libdir="@libdir@"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
 docdir="@docdir@"
