--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -44,7 +44,8 @@ examplesbuildaux_DATA = \
   ../gnulib-m4/javacomp.m4 ../gnulib-m4/javaexec.m4 \
   ../gnulib-m4/csharp.m4 ../gnulib-m4/csharpcomp.m4 ../gnulib-m4/csharpexec.m4 csharpexec-test.exe \
   ../gnulib-m4/gocomp.m4 \
-  ../gnulib-m4/dcomp.m4
+  ../gnulib-m4/dcomp.m4 \
+  ../gnulib-m4/modula2comp.m4
 
 # Generate this list with
 # find . -type f -name '*.m4' -printf '  %f\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
