--- a/gettext-tools/examples/po/Makefile.am
+++ b/gettext-tools/examples/po/Makefile.am
@@ -68,6 +68,7 @@ POTFILES = \
   hello-sh/hello.sh \
   hello-gawk/hello.awk \
   hello-pascal/hello.pas \
+  hello-modula2/hello.mod.in \
   hello-d/hello.d.in \
   hello-smalltalk/hello.st.in \
   hello-tcl/hello.tcl \
@@ -110,6 +111,7 @@ SMALLPOTS = \
   hello-sh.pot \
   hello-gawk.pot \
   hello-pascal.pot \
+  hello-modula2.pot \
   hello-d.pot \
   hello-smalltalk.pot \
   hello-tcl.pot \
@@ -354,6 +356,9 @@ hello-gawk.pot : $(POTFILES_DEPS)
 hello-pascal.pot : $(POTFILES_DEPS)
 	$(USE_BUILT_PROGS) $(SHELL) '$(srcdir)/xsmallpot.sh' '$(srcdir)' hello-pascal
 
+hello-modula2.pot : $(POTFILES_DEPS)
+	$(USE_BUILT_PROGS) $(SHELL) '$(srcdir)/xsmallpot.sh' '$(srcdir)' hello-modula2
+
 hello-d.pot : $(POTFILES_DEPS)
 	$(USE_BUILT_PROGS) $(SHELL) '$(srcdir)/xsmallpot.sh' '$(srcdir)' hello-d
 
@@ -482,6 +487,7 @@ SMALLPOFILES_FOR_lang = \
   $(srcdir)/../hello-sh/po/$$lang.po \
   $(srcdir)/../hello-gawk/po/$$lang.po \
   $(srcdir)/../hello-pascal/po/$$lang.po \
+  $(srcdir)/../hello-modula2/po/$$lang.po \
   $(srcdir)/../hello-d/po/$$lang.po \
   $(srcdir)/../hello-smalltalk/po/$$lang.po \
   $(srcdir)/../hello-tcl/po/$$lang.po \
@@ -582,6 +588,9 @@ $(srcdir)/../hello-gawk/po/$(LL).po: $(srcdir)/hello-gawk.pot $(srcdir)/$(LL).po
 
 $(srcdir)/../hello-pascal/po/$(LL).po: $(srcdir)/hello-pascal.pot $(srcdir)/$(LL).po
 	$(USE_BUILT_PROGS) cd $(srcdir) && $(SHELL) mmsmallpo.sh hello-pascal $(LL)
+
+$(srcdir)/../hello-modula2/po/$(LL).po: $(srcdir)/hello-modula2.pot $(srcdir)/$(LL).po
+	$(USE_BUILT_PROGS) cd $(srcdir) && $(SHELL) mmsmallpo.sh hello-modula2 $(LL)
 
 $(srcdir)/../hello-d/po/$(LL).po: $(srcdir)/hello-d.pot $(srcdir)/$(LL).po
 	$(USE_BUILT_PROGS) cd $(srcdir) && $(SHELL) mmsmallpo.sh hello-d $(LL)
