Modula-2 support: Fix VPATH builds.
* gettext-runtime/intl-modula2/Makefile.am (install-modula2-sources): Take
Libintl.def from the build dir, not from the source dir.
* gettext-tools/tests/lang-modula2: Search for Libintl.def in the build dir,
not in the source dir.

--- a/gettext-runtime/intl-modula2/Makefile.am
+++ b/gettext-runtime/intl-modula2/Makefile.am
@@ -96,8 +96,8 @@ uninstall-local: uninstall-modula2-sources
 install-modula2-sources:
 	$(MKDIR_P) $(DESTDIR)$(m2includedir)
 	@for f in Libintl.def; do \
-	  echo "$(INSTALL_DATA) $(srcdir)/$$f $(DESTDIR)$(m2includedir)/$$f"; \
-	  $(INSTALL_DATA) $(srcdir)/$$f $(DESTDIR)$(m2includedir)/$$f; \
+	  echo "$(INSTALL_DATA) $$f $(DESTDIR)$(m2includedir)/$$f"; \
+	  $(INSTALL_DATA) $$f $(DESTDIR)$(m2includedir)/$$f; \
 	done
 
 installdirs-modula2-sources:
