Modula-2: Fix linking of libintl_m2 on non-ELF platforms.
* gettext-runtime/intl-modula2/Makefile.am (libintl_m2_la_LDFLAGS): Link with
libm2pim.la.

--- a/gettext-runtime/intl-modula2/Makefile.am
+++ b/gettext-runtime/intl-modula2/Makefile.am
@@ -64,7 +64,8 @@ LTV_AGE=0
 libintl_m2_la_LDFLAGS = \
   -no-undefined \
   -version-info $(LTV_CURRENT):$(LTV_REVISION):$(LTV_AGE) \
-  -rpath $(libdir)
+  -rpath $(libdir) \
+  `$(M2C) -print-file-name=libm2pim.la`
 
 # Installation of libintl_m2.la.
 
