intl-modula2: Fix a build failure on Ubuntu 22.04.
* gettext-runtime/configure.ac: Substitute M2SHLIBEXT.
* gettext-runtime/intl-modula2/Makefile.am (libintl_m2_la_LDFLAGS): Attempt
harder to find the libm2pim library.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -194,6 +194,9 @@ AS_IF([test "$MODULA2_CHOICE" != no],
       AC_SUBST([VALUE_OF_LC_COLLATE])
       AC_SUBST([VALUE_OF_LC_MONETARY])
       AC_SUBST([VALUE_OF_LC_MESSAGES])
+      AC_REQUIRE([AC_LIB_RPATH])
+      M2SHLIBEXT="$acl_shlibext"
+      AC_SUBST([M2SHLIBEXT])
      ],
      [BUILDMODULA2=no
      ])
