Update after gnulib changed.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@
 !/gettext-tools/gnulib-tests/Makefile.am
 /gettext-tools/libgettextpo/glthread/
 /gettext-tools/libgettextpo/gnulib-m4/
+/gettext-tools/libgettextpo/unicase/
 /gettext-tools/libgettextpo/uniconv/
 /gettext-tools/libgettextpo/unictype/
 /gettext-tools/libgettextpo/unilbrk/
@@ -88,7 +89,20 @@
 /gettext-tools/libgettextpo/c-strstr.h
 /gettext-tools/libgettextpo/c++defs.h
 /gettext-tools/libgettextpo/c32is-impl.h
+/gettext-tools/libgettextpo/c32isalnum.c
+/gettext-tools/libgettextpo/c32isalpha.c
+/gettext-tools/libgettextpo/c32isblank.c
 /gettext-tools/libgettextpo/c32iscntrl.c
+/gettext-tools/libgettextpo/c32isdigit.c
+/gettext-tools/libgettextpo/c32isgraph.c
+/gettext-tools/libgettextpo/c32islower.c
+/gettext-tools/libgettextpo/c32isprint.c
+/gettext-tools/libgettextpo/c32ispunct.c
+/gettext-tools/libgettextpo/c32isspace.c
+/gettext-tools/libgettextpo/c32isupper.c
+/gettext-tools/libgettextpo/c32isxdigit.c
+/gettext-tools/libgettextpo/c32to-impl.h
+/gettext-tools/libgettextpo/c32tolower.c
 /gettext-tools/libgettextpo/c32width.c
 /gettext-tools/libgettextpo/calloc.c
 /gettext-tools/libgettextpo/cloexec.c
@@ -170,6 +184,10 @@
 /gettext-tools/libgettextpo/isnanf.c
 /gettext-tools/libgettextpo/isnanl-nolibm.h
 /gettext-tools/libgettextpo/isnanl.c
+/gettext-tools/libgettextpo/iswblank.c
+/gettext-tools/libgettextpo/iswdigit.c
+/gettext-tools/libgettextpo/iswpunct.c
+/gettext-tools/libgettextpo/iswxdigit.c
 /gettext-tools/libgettextpo/itold.c
 /gettext-tools/libgettextpo/lc-charset-dispatch.c
 /gettext-tools/libgettextpo/lc-charset-dispatch.h
@@ -178,6 +196,7 @@
 /gettext-tools/libgettextpo/localcharset.c
 /gettext-tools/libgettextpo/localcharset.h
 /gettext-tools/libgettextpo/locale.in.h
+/gettext-tools/libgettextpo/localeconv.c
 /gettext-tools/libgettextpo/malloc.c
 /gettext-tools/libgettextpo/malloca.c
 /gettext-tools/libgettextpo/malloca.h
@@ -185,11 +204,16 @@
 /gettext-tools/libgettextpo/markup.h
 /gettext-tools/libgettextpo/math.c
 /gettext-tools/libgettextpo/math.in.h
+/gettext-tools/libgettextpo/mbchar.c
+/gettext-tools/libgettextpo/mbchar.h
+/gettext-tools/libgettextpo/mbiterf.c
+/gettext-tools/libgettextpo/mbiterf.h
 /gettext-tools/libgettextpo/mbrtoc32.c
 /gettext-tools/libgettextpo/mbrtowc.c
 /gettext-tools/libgettextpo/mbrtowc-impl.h
 /gettext-tools/libgettextpo/mbrtowc-impl-utf8.h
 /gettext-tools/libgettextpo/mbsinit.c
+/gettext-tools/libgettextpo/mbsnlen.c
 /gettext-tools/libgettextpo/mbswidth.c
 /gettext-tools/libgettextpo/mbswidth.h
 /gettext-tools/libgettextpo/mbszero.c
@@ -206,6 +230,8 @@
 /gettext-tools/libgettextpo/msvc-inval.h
 /gettext-tools/libgettextpo/msvc-nothrow.c
 /gettext-tools/libgettextpo/msvc-nothrow.h
+/gettext-tools/libgettextpo/next-prime.c
+/gettext-tools/libgettextpo/next-prime.h
 /gettext-tools/libgettextpo/obstack.c
 /gettext-tools/libgettextpo/obstack.in.h
 /gettext-tools/libgettextpo/open.c
@@ -285,9 +311,11 @@
 /gettext-tools/libgettextpo/textstyle.in.h
 /gettext-tools/libgettextpo/time.in.h
 /gettext-tools/libgettextpo/uchar.in.h
+/gettext-tools/libgettextpo/unicase.in.h
 /gettext-tools/libgettextpo/uniconv.in.h
 /gettext-tools/libgettextpo/unictype.in.h
 /gettext-tools/libgettextpo/unilbrk.in.h
+/gettext-tools/libgettextpo/uninorm.in.h
 /gettext-tools/libgettextpo/unistd.c
 /gettext-tools/libgettextpo/unistd.in.h
 /gettext-tools/libgettextpo/unistr.in.h
