--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -35,6 +35,22 @@
 /lib/c-strcase.h
 /lib/c-strcasecmp.c
 /lib/c-strncasecmp.c
+/lib/c32is-impl.h
+/lib/c32isalnum.c
+/lib/c32isalpha.c
+/lib/c32isblank.c
+/lib/c32iscntrl.c
+/lib/c32isdigit.c
+/lib/c32isgraph.c
+/lib/c32islower.c
+/lib/c32isprint.c
+/lib/c32ispunct.c
+/lib/c32isspace.c
+/lib/c32isupper.c
+/lib/c32isxdigit.c
+/lib/c32to-impl.h
+/lib/c32tolower.c
+/lib/c32width.c
 /lib/calloc.c
 /lib/cloexec.c
 /lib/cloexec.h
@@ -92,6 +108,8 @@
 /lib/glib.in.h
 /lib/glibconfig.in.h
 /lib/glthread/
+/lib/hard-locale.c
+/lib/hard-locale.h
 /lib/html-ostream.oo.c
 /lib/html-ostream.oo.h
 /lib/html-styled-ostream.oo.c
@@ -113,17 +131,39 @@
 /lib/isnanf-nolibm.h
 /lib/isnanl.c
 /lib/isnanl-nolibm.h
+/lib/iswblank.c
+/lib/iswdigit.c
+/lib/iswpunct.c
+/lib/iswxdigit.c
 /lib/itold.c
+/lib/lc-charset-dispatch.c
+/lib/lc-charset-dispatch.h
 /lib/libcroco/
 /lib/libxml/
 /lib/limits.in.h
+/lib/localcharset.c
+/lib/localcharset.h
+/lib/locale.in.h
+/lib/localeconv.c
 /lib/log10.c
 /lib/malloc.c
 /lib/malloca.c
 /lib/malloca.h
 /lib/math.c
 /lib/math.in.h
+/lib/mbchar.c
+/lib/mbchar.h
+/lib/mbiterf.c
+/lib/mbiterf.h
+/lib/mbrtoc32.c
+/lib/mbrtowc-impl-utf8.h
+/lib/mbrtowc-impl.h
+/lib/mbrtowc.c
+/lib/mbsinit.c
+/lib/mbsnlen.c
 /lib/mbszero.c
+/lib/mbtowc-lock.c
+/lib/mbtowc-lock.h
 /lib/mem-hash-map.c
 /lib/mem-hash-map.h
 /lib/memchr.c
@@ -136,6 +176,8 @@
 /lib/msvc-inval.h
 /lib/msvc-nothrow.c
 /lib/msvc-nothrow.h
+/lib/next-prime.c
+/lib/next-prime.h
 /lib/noop-styled-ostream.oo.c
 /lib/noop-styled-ostream.oo.h
 /lib/noreturn.h
@@ -166,6 +208,10 @@
 /lib/same-inode.c
 /lib/same-inode.h
 /lib/sched.in.h
+/lib/setlocale-lock.c
+/lib/setlocale_null-unlocked.c
+/lib/setlocale_null.c
+/lib/setlocale_null.h
 /lib/sig-handler.c
 /lib/sig-handler.h
 /lib/sigaction.c
@@ -197,6 +243,7 @@
 /lib/stpcpy.c
 /lib/str_endswith.c
 /lib/str_startswith.c
+/lib/streq.h
 /lib/strerror.c
 /lib/strerror-override.c
 /lib/strerror-override.h
@@ -222,11 +269,19 @@
 /lib/time.in.h
 /lib/tparm.c
 /lib/tputs.c
+/lib/uchar.in.h
+/lib/unicase/
+/lib/unicase.in.h
+/lib/unictype/
+/lib/unictype.in.h
+/lib/uninorm.in.h
 /lib/unistd.c
 /lib/unistd.in.h
 /lib/unistr/
 /lib/unistr.in.h
 /lib/unitypes.in.h
+/lib/uniwidth/
+/lib/uniwidth.in.h
 /lib/unused-parameter.h
 /lib/vasnprintf.c
 /lib/vasnprintf.h
@@ -238,6 +293,9 @@
 /lib/w32sock.h
 /lib/warn-on-use.h
 /lib/wchar.in.h
+/lib/wctype-h.c
+/lib/wctype.in.h
+/lib/wcwidth.c
 /lib/windows-initguard.h
 /lib/windows-mutex.c
 /lib/windows-mutex.h
