--- a/gettext-runtime/intl-modula2/Makefile.am
+++ b/gettext-runtime/intl-modula2/Makefile.am
@@ -65,15 +65,15 @@ LTV_AGE=0
 # - In GCC builds from source, the .la files are present and work.
 # - In distros, either libm2pim.so may work, or m2/m2pim/libm2pim.so, depending
 #   on the distro's packaging.
-libintl_m2_la_LIBADD = \
-  $$(libm2=`$(M2C) -print-file-name=libm2pim.la`; \
-     if test "$$libm2" != 'libm2pim.la'; then echo "$$libm2"; else \
-       libm2=`$(M2C) -print-file-name=libm2pim.$(M2SHLIBEXT)`; \
-       if test "$$libm2" != 'libm2pim.$(M2SHLIBEXT)'; then echo "$$libm2"; else \
-         libm2=`$(M2C) -print-file-name=m2/m2pim/libm2pim.$(M2SHLIBEXT)`; \
-         if test "$$libm2" != 'm2/m2pim/libm2pim.$(M2SHLIBEXT)'; then echo "$$libm2"; fi; \
-       fi; \
-     fi)
+LIBM2PIM != libm2=`$(M2C) -print-file-name=libm2pim.la`; \
+            if test "$$libm2" != 'libm2pim.la'; then echo "$$libm2"; else \
+              libm2=`$(M2C) -print-file-name=libm2pim.$(M2SHLIBEXT)`; \
+              if test "$$libm2" != 'libm2pim.$(M2SHLIBEXT)'; then echo "$$libm2"; else \
+                libm2=`$(M2C) -print-file-name=m2/m2pim/libm2pim.$(M2SHLIBEXT)`; \
+                if test "$$libm2" != 'm2/m2pim/libm2pim.$(M2SHLIBEXT)'; then echo "$$libm2"; fi; \
+              fi; \
+            fi
+libintl_m2_la_LIBADD += $(LIBM2PIM)
 libintl_m2_la_LDFLAGS = \
   -no-undefined \
   -version-info $(LTV_CURRENT):$(LTV_REVISION):$(LTV_AGE) \
