build: Tweak option for MSVC.
Suggested by Kirill Makurin <maiddaisuki@outlook.com> in
<https://lists.gnu.org/archive/html/bug-gettext/2025-05/msg00071.html>.

* gettext-tools/src/Makefile.am (xgettext_LDFLAGS): Use an MSVC option with '-'
instead of '/', for resilience against the (unsupported) MSYS2.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -568,7 +568,7 @@ endif
 # recursion depth of 1000, we need to increase the stack size. Cf.
 # <https://learn.microsoft.com/en-us/cpp/build/reference/f-set-stack-size>.
 if PLATFORM_IS_MSVC
-xgettext_LDFLAGS += -Wl,/F4000000
+xgettext_LDFLAGS += -Wl,-F4000000
 endif
 
 # Linking with C++ libraries is needed _only_ on mingw and Cygwin.
