xgettext: C: Improve heuristic for format strings.
* gettext-tools/src/format-c-parse.h (struct spec): Add field
'likely_intentional_directives'.
(format_parse_entrails): Set it to the number of directives that don't contain
a space.
* gettext-tools/src/format-c.c (format_is_unlikely_intentional): Also test the
'likely_intentional_directives' field.
* gettext-tools/tests/format-c-6: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -197,7 +197,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-ycp-stackovfl-3 xgettext-ycp-stackovfl-4 \
 	format-awk-1 format-awk-2 format-awk-3 \
 	format-boost-1 format-boost-2 \
-	format-c-1 format-c-2 format-c-3 format-c-4 format-c-5 \
+	format-c-1 format-c-2 format-c-3 format-c-4 format-c-5 format-c-6 \
 	format-c++-brace-1 format-c++-brace-2 \
 	format-csharp-1 format-csharp-2 \
 	format-d-1 format-d-2 \
